--- a/2-animation/style.css
+++ b/2-animation/style.css
@@ -56,13 +56,18 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.page-heading {
+  text-align: center;
+}
+
 .start-button {
   margin: 2px auto 7px;
 }
 
 .figures {
   width: 100%;
-  height: calc(100vh - 30px);
+  height: calc(100vh - 120px);
   display: flex;
   flex-direction: column;
   align-items: center;
