--- a/5-debounce/style.css
+++ b/5-debounce/style.css
@@ -1,6 +1,7 @@
 .page-heading {
   text-align: center;
 }
+
 .button {
   width: 100%;
   padding: 100px 0;
@@ -12,7 +13,7 @@
 .elements {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
   width: 100%;
   height: 200px;
   display: flex;
